{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 51,
  "lineage": "0cd446be-a85a-1d45-752a-7d7b02973287",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab_instancia01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:749097040040:instance/i-0d8b1d2fbb022ac00",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8b1d2fbb022ac00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cc7dda9d5d9e9d22",
            "private_dns": "ip-10-0-2-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b34be63de842d9e6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec717e10bb806d30",
            "tags": {
              "Name": "lab_instancia01",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "lab_instancia01",
              "project": "lab01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c61d956de1cf3c7a"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab_instancia02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:749097040040:instance/i-07746012d6cbd5c36",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07746012d6cbd5c36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a97fdfc0b48941f",
            "private_dns": "ip-10-0-2-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e138caf8d0702935",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09cd9f9afcd03dc1b",
            "tags": {
              "Name": "lab_instancia02",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "lab_instancia02",
              "project": "lab01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c61d956de1cf3c7a"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "labpessoal01-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:internet-gateway/igw-003b3198ba9467f5f",
            "id": "igw-003b3198ba9467f5f",
            "owner_id": "749097040040",
            "tags": {
              "Name": "labpessoal01-igw",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-igw",
              "project": "lab01"
            },
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749097040040:loadbalancer/app/labpessoal01-alb/7de3fef43557a408",
            "arn_suffix": "app/labpessoal01-alb/7de3fef43557a408",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "labpessoal01-alb-983375226.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:749097040040:loadbalancer/app/labpessoal01-alb/7de3fef43557a408",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "labpessoal01-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ea261d1124936ba9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03439d509166040e0"
              },
              {
                "subnet_id": "subnet-0a04b1201a5194447"
              }
            ],
            "subnets": [
              "subnet-03439d509166040e0",
              "subnet-0a04b1201a5194447"
            ],
            "tags": {
              "project": "lab01"
            },
            "tags_all": {
              "project": "lab01"
            },
            "vpc_id": "vpc-0bf4705c4dd014638",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.PublicALB",
            "aws_subnet.labpessoal01-subnet-public1-us-east-1a",
            "aws_subnet.labpessoal01-subnet-public2-us-east-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749097040040:listener/app/labpessoal01-alb/7de3fef43557a408/90a67f38f23f8f5f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:749097040040:targetgroup/targetgroup01/04c1c7ccf17ee94a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:749097040040:listener/app/labpessoal01-alb/7de3fef43557a408/90a67f38f23f8f5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:749097040040:loadbalancer/app/labpessoal01-alb/7de3fef43557a408",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "project": "lab01"
            },
            "tags_all": {
              "project": "lab01"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.targetgroup01",
            "aws_security_group.PublicALB",
            "aws_subnet.labpessoal01-subnet-public1-us-east-1a",
            "aws_subnet.labpessoal01-subnet-public2-us-east-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetgroup01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:749097040040:targetgroup/targetgroup01/04c1c7ccf17ee94a",
            "arn_suffix": "targetgroup/targetgroup01/04c1c7ccf17ee94a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:749097040040:targetgroup/targetgroup01/04c1c7ccf17ee94a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "targetgroup01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "lab01"
            },
            "tags_all": {
              "project": "lab01"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "labpessoal01-rtb-private1-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:route-table/rtb-08a13a95cd42198e7",
            "id": "rtb-08a13a95cd42198e7",
            "owner_id": "749097040040",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "labpessoal01-rtb-private1-us-east-1a",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-rtb-private1-us-east-1a",
              "project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "labpessoal01-rtb-private2-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:route-table/rtb-07f4f20fb1feb96dc",
            "id": "rtb-07f4f20fb1feb96dc",
            "owner_id": "749097040040",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "labpessoal01-rtb-private2-us-east-1b",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-rtb-private2-us-east-1b",
              "project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "labpessoal01-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:route-table/rtb-0e3a3acb5cce818fe",
            "id": "rtb-0e3a3acb5cce818fe",
            "owner_id": "749097040040",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003b3198ba9467f5f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "labpessoal01-rtb-public",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-rtb-public",
              "project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PublicALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:security-group/sg-0ea261d1124936ba9",
            "description": "Public access to ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c61d956de1cf3c7a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ea261d1124936ba9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Public HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PublicALB",
            "name_prefix": "",
            "owner_id": "749097040040",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "PublicALB",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "PublicALB",
              "project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:security-group/sg-04610df10574feae5",
            "description": "allow alb to access ec2 in private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04610df10574feae5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea261d1124936ba9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-to-ec2",
            "name_prefix": "",
            "owner_id": "749097040040",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "alb-to-ec2",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "alb-to-ec2",
              "project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "labpessoal01-subnet-private1-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:subnet/subnet-0ec717e10bb806d30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec717e10bb806d30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749097040040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "labpessoal01-subnet-private1-us-east-1a",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-subnet-private1-us-east-1a",
              "project": "lab01"
            },
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "labpessoal01-subnet-private2-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:subnet/subnet-09cd9f9afcd03dc1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cd9f9afcd03dc1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749097040040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "labpessoal01-subnet-private2-us-east-1b",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-subnet-private2-us-east-1b",
              "project": "lab01"
            },
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "labpessoal01-subnet-public1-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:subnet/subnet-0a04b1201a5194447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a04b1201a5194447",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749097040040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "labpessoal01-subnet-public1-us-east-1a",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-subnet-public1-us-east-1a",
              "project": "lab01"
            },
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "labpessoal01-subnet-public2-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:subnet/subnet-03439d509166040e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03439d509166040e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "749097040040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "labpessoal01-subnet-public2-us-east-1b",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-subnet-public2-us-east-1b",
              "project": "lab01"
            },
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "labpessoal01-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:vpc/vpc-0bf4705c4dd014638",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-041059cd24783b9a0",
            "default_route_table_id": "rtb-0cf4986a2ce08c946",
            "default_security_group_id": "sg-07f6678575c3103a5",
            "dhcp_options_id": "dopt-093e7d97a1ee3906e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf4705c4dd014638",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf4986a2ce08c946",
            "owner_id": "749097040040",
            "tags": {
              "Name": "labpessoal01-vpc",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-vpc",
              "project": "lab01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "labpessoal01-vpce-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:749097040040:vpc-endpoint/vpce-00ef0cc850180f6e2",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00ef0cc850180f6e2",
            "ip_address_type": "ipv4",
            "owner_id": "749097040040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07f4f20fb1feb96dc",
              "rtb-08a13a95cd42198e7"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "labpessoal01-vpce-s3",
              "project": "lab01"
            },
            "tags_all": {
              "Name": "labpessoal01-vpce-s3",
              "project": "lab01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bf4705c4dd014638"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}